--- a/portal/templates/flask_user/register.html
+++ b/portal/templates/flask_user/register.html
@@ -9,6 +9,8 @@
     .password-popover li.success-text::before { content: "\2713"; display: inline-block; margin-right: 4px; }
     .success-text { color: green; font-weight: bold;}
     .default-text { color: #31708f; font-weight: normal;  }
+    .fail-text {color: #a94442; font-weight: bold;}
+    .password-popover li.fail-text::before { content: "\2715"; display: inline-block; margin-right: 4px; }
 
 </style>
 <form id="regForm" action="" method="POST" novalidate formnovalidate class="form to-validate" role="form" style="margin-left: 1em">
@@ -24,14 +26,14 @@
                 {{ render_field(field, label="Email address", label_visible=false, tabindex=220, required="required", data_error="Email address is required." ) }}
 
                 {% if user_manager.enable_email and user_manager.enable_username %}
-                {{ render_field(form.email, label="Email", label_visible=false, tabindex=230, data_customemail="true" ) }}
+                {{ render_field(form.email, label="Email", label_visible=false, tabindex=230, data_customemail="true") }}
                 {% endif %}
                 <div class="password-wrapper">
-                {{ render_field(form.password, label="Password", label_visible=false, data_error="Oops, the password does not meet the minimum requirements.", pattern="^(?=.*[a-z])(?=.*[A-Z])(?=.*\d).{8,}$", autocomplete="new-password", tabindex=230) }}
+                {{ render_field(form.password, label="Password", label_visible=false, data_error="Oops, the password does not meet the minimum requirements.", pattern="^(?=.*[a-z])(?=.*[A-Z])(?=.*\d).{8,}$", autocomplete="new-password", tabindex=230, required="required") }}
                 </div>
 
                 {% if user_manager.enable_retype_password %}
-                {{ render_field(form.retype_password, label="Retype Password", label_visible=false, data_match="#password", data_match_error="Oops, the two password fields do not match.", tabindex=240) }}
+                {{ render_field(form.retype_password, label="Retype Password", label_visible=false, data_match="#password", data_match_error="Oops, the two password fields do not match.", tabindex=240, required="required", data_error="Please re-type your password.") }}
                 {% endif %}
                 <br/>
 
@@ -123,7 +125,7 @@ $(document).ready(function(){
     })(window.location.search.substr(1).split('&'));
 
     if (qs["email"]) $("#email").val(qs["email"]);
-    $("#password").popover({"content": "<b>Password must:</b><ul id='pwdHintList'><li class='text-info eight-characters'>Have at least 8 characters</li><li class='text-info lowercase-letter'>Have at least one lowercase letter</li><li class='text-info uppercase-letter'>Have at least one uppercase letter</li><li class='text-info one-number'>Have at least one number</li></ul>", "placement": "top", "html": true, "title": "Requirements", "template": '<div class="password-popover popover" role="tooltip"><div class="arrow"></div><h3 class="popover-title"></h3><div class="popover-content"></div></div>', "container": ".password-wrapper", "trigger": "focus"}).click(function(e) {
+    $("#password").popover({"content": "<b>Password must have at least:</b><ul id='pwdHintList'><li class='text-info eight-characters'>Eight characters</li><li class='text-info lowercase-letter'>One lowercase letter</li><li class='text-info uppercase-letter'>One uppercase letter</li><li class='text-info one-number'>One number</li></ul>", "placement": "top", "html": true, "title": "Requirements", "template": '<div class="password-popover popover" role="tooltip"><div class="arrow"></div><h3 class="popover-title"></h3><div class="popover-content"></div></div>', "container": ".password-wrapper", "trigger": "focus", "delay": 500}).click(function(e) {
         if (!$(".password-popover").is(":visible")) $(this).popover("show");
         e.stopPropagation();
     });
@@ -133,18 +135,22 @@ $(document).ready(function(){
     //[a-z])(?=.*[A-Z])(?=.*\d).{8
     $("#password").on("keyup", function() {
         var pwd = $(this).val();
-        var l = $('#password').data('bs.popover').tip().find("#pwdHintList");
-        if (/[a-z]/.test(pwd)) l.find(".lowercase-letter").addClass("success-text");
-        else l.find(".lowercase-letter").removeClass("success-text");
-        if (/[A-Z]/.test(pwd)) l.find(".uppercase-letter").addClass("success-text");
-        else l.find(".uppercase-letter").removeClass("success-text");
-        if (/\d/.test(pwd)) l.find(".one-number").addClass("success-text");
-        else l.find(".one-number").removeClass("success-text");
-        if (pwd.length >= 8) l.find(".eight-characters").addClass("success-text");
-        else l.find(".eight-characters").removeClass("success-text");
         if (/^(?=.*[a-z])(?=.*[A-Z])(?=.*\d).{8,}$/.test(pwd)) {
             $("#errorpassword").text("");
         };
+        var l = $('#password').data('bs.popover').tip().find("#pwdHintList");
+        if (hasValue(pwd)) {
+            if (/[a-z]/.test(pwd)) l.find(".lowercase-letter").removeClass("fail-text").addClass("success-text");
+            else l.find(".lowercase-letter").removeClass("success-text").addClass("fail-text");
+            if (/[A-Z]/.test(pwd)) l.find(".uppercase-letter").removeClass("fail-text").addClass("success-text");
+            else l.find(".uppercase-letter").removeClass("success-text").addClass("fail-text");
+            if (/\d/.test(pwd)) l.find(".one-number").removeClass("fail-text").addClass("success-text");
+            else l.find(".one-number").removeClass("success-text").addClass("fail-text");
+            if (pwd.length >= 8) l.find(".eight-characters").removeClass("fail-text").addClass("success-text");
+            else l.find(".eight-characters").removeClass("success-text").addClass("fail-text");
+        } else {
+            l.find("li").removeClass("success-text").removeClass("fail-text");
+        }
     });
     $("#password").on("blur", function() {
         $(this).popover("hide");
