--- a/portal/static/css/portal.css
+++ b/portal/static/css/portal.css
@@ -66,6 +66,10 @@ a.btn {
   background-color: #FFF;
   border: 1px solid #bdb9b9;
 }
+.btn.disabled,
+.btn-tnth-primary.disabled {
+  opacity: 0.6;
+}
 .btn-set {
   margin-bottom: 1.5em;
 }
@@ -78,6 +82,7 @@ a.btn {
   border-color: #606a73;
   transition: all 0.3s ease-in-out 0s;
   -webkit-transition: all 0.3s ease-in-out 0s;
+  border-radius: 0;
 }
 .btn-tnth-primary:hover,
 .btn-tnth-primary:focus,
@@ -718,7 +723,14 @@ h4.detail-title {
   border-radius: 45px;
 }
 .portal-item {
-  margin: 2em 0 3em;
+  margin: 3em 0;
+}
+.portal-description {
+  margin-bottom: 1em;
+}
+.loading-message-indicator {
+  z-index: 10;
+  display: none;
 }
 .img-with-text {
   position: relative;
