--- a/portal/templates/flask_user/register.html
+++ b/portal/templates/flask_user/register.html
@@ -6,6 +6,7 @@
     .password-popover { min-width: 200px; max-width: 290px; right: 50px !important;}
     .password-popover .popover-content { padding: 1.2em 1em 2em 1em; width: 100%; margin: 0 auto;}
     #pwdHintList {padding: 0; margin:2px; list-style-type: none}
+    .password-popover li { margin-left: 1em;}
     .password-popover li.success-text::before { content: "\2713"; display: inline-block; margin-right: 4px; }
     .success-text { color: green; font-weight: bold;}
     .default-text { color: #31708f; font-weight: normal;  }
@@ -103,6 +104,8 @@
 {% endblock %}
 {% block document_ready %}
 
+var __passwordReg = /^(?=.*[a-z])(?=.*[A-Z])(?=.*\d).{8,}$/;
+
 $(document).ready(function(){
     // Need to properly form attribute name
     $("[data-match_error]").each(function(){
@@ -125,38 +128,50 @@ $(document).ready(function(){
     })(window.location.search.substr(1).split('&'));
 
     if (qs["email"]) $("#email").val(qs["email"]);
-    $("#password").popover({"content": "<b>Password must have at least:</b><ul id='pwdHintList'><li class='text-info eight-characters'>Eight characters</li><li class='text-info lowercase-letter'>One lowercase letter</li><li class='text-info uppercase-letter'>One uppercase letter</li><li class='text-info one-number'>One number</li></ul>", "placement": "top", "html": true, "title": "Requirements", "template": '<div class="password-popover popover" role="tooltip"><div class="arrow"></div><h3 class="popover-title"></h3><div class="popover-content"></div></div>', "container": ".password-wrapper", "trigger": "focus", "delay": 500}).click(function(e) {
-        if (!$(".password-popover").is(":visible")) $(this).popover("show");
+
+    $("#password").popover({"content": "<b>Password must have at least:</b><ul id='pwdHintList'><li class='text-info eight-characters'>Eight characters</li><li class='text-info lowercase-letter'>One lowercase letter</li><li class='text-info uppercase-letter'>One uppercase letter</li><li class='text-info one-number'>One number</li></ul>", "placement": "top", "html": true, "title": "Requirements", "template": '<div class="password-popover popover" role="tooltip"><div class="arrow"></div><h3 class="popover-title"></h3><div class="popover-content"></div></div>', "container": ".password-wrapper", "trigger": "manual"}).click(function(e) {
+        $(this).trigger("focus");
         e.stopPropagation();
+    }).on("keyup", function() {
+        var pwd = $(this).val();
+        var l = $('#password').data('bs.popover').tip().find("#pwdHintList");
+        if (__passwordReg.test(pwd)) {
+            $("#errorpassword").text("");
+            l.find("li").removeClass("fail-text").addClass("success-text");
+            setTimeout('$("#password").popover("hide");', 500);
+        } else {
+            if (!$(this).data('bs.popover').tip().hasClass('in')) $(this).popover("show");
+            if (hasValue(pwd)) {
+                if (/[a-z]/.test(pwd)) l.find(".lowercase-letter").removeClass("fail-text").addClass("success-text");
+                else l.find(".lowercase-letter").removeClass("success-text").addClass("fail-text");
+                if (/[A-Z]/.test(pwd)) l.find(".uppercase-letter").removeClass("fail-text").addClass("success-text");
+                else l.find(".uppercase-letter").removeClass("success-text").addClass("fail-text");
+                if (/\d/.test(pwd)) l.find(".one-number").removeClass("fail-text").addClass("success-text");
+                else l.find(".one-number").removeClass("success-text").addClass("fail-text");
+                if (pwd.length >= 8) l.find(".eight-characters").removeClass("fail-text").addClass("success-text");
+                else l.find(".eight-characters").removeClass("success-text").addClass("fail-text");
+            } else {
+                l.find("li").removeClass("success-text").removeClass("fail-text");
+            };
+        };
+    }).on("blur", function() {
+        $(this).popover("hide");
+    }).on("focus", function() {
+        var pwd = $(this).val();
+        if (!__passwordReg.test(pwd)) {
+            $(this).popover("show");
+        } else return true;
+    }).on("shown.bs.popover", function () {
+      $(this).trigger("keyup");
     });
+
     $("html").click(function(e) {
         $("#password").popover("hide");
     });
-    //[a-z])(?=.*[A-Z])(?=.*\d).{8
-    $("#password").on("keyup", function() {
-        var pwd = $(this).val();
-        if (/^(?=.*[a-z])(?=.*[A-Z])(?=.*\d).{8,}$/.test(pwd)) {
-            $("#errorpassword").text("");
+    $("#retype_password").on("blur", function() {
+        if (!hasValue($(this).val())) {
+            $("#errorretype_password").addClass("has-error").text("Please re-type your password.");
         };
-        var l = $('#password').data('bs.popover').tip().find("#pwdHintList");
-        if (hasValue(pwd)) {
-            if (/[a-z]/.test(pwd)) l.find(".lowercase-letter").removeClass("fail-text").addClass("success-text");
-            else l.find(".lowercase-letter").removeClass("success-text").addClass("fail-text");
-            if (/[A-Z]/.test(pwd)) l.find(".uppercase-letter").removeClass("fail-text").addClass("success-text");
-            else l.find(".uppercase-letter").removeClass("success-text").addClass("fail-text");
-            if (/\d/.test(pwd)) l.find(".one-number").removeClass("fail-text").addClass("success-text");
-            else l.find(".one-number").removeClass("success-text").addClass("fail-text");
-            if (pwd.length >= 8) l.find(".eight-characters").removeClass("fail-text").addClass("success-text");
-            else l.find(".eight-characters").removeClass("success-text").addClass("fail-text");
-        } else {
-            l.find("li").removeClass("success-text").removeClass("fail-text");
-        }
-    });
-    $("#password").on("blur", function() {
-        $(this).popover("hide");
-    });
-    $("#password").on("shown.bs.popover", function () {
-      $(this).trigger("keyup");
     });
 
 });
