reset error text back to empty for valid re-typed password

--- a/portal/templates/flask_user/register.html
+++ b/portal/templates/flask_user/register.html
@@ -171,7 +171,7 @@ $(document).ready(function(){
     $("#retype_password").on("blur", function() {
         if (!hasValue($(this).val())) {
             $("#errorretype_password").addClass("has-error").text("Please re-type your password.");
-        };
+        } else $("#errorretype_password").text("");
     });
 
 });
