fix check for link_url in portal.html

--- a/portal/templates/portal.html
+++ b/portal/templates/portal.html
@@ -30,7 +30,7 @@
                 </div>
             {% endif %}
             
-            {% if display.link_url is none %}
+            {% if not display.link_url %}
                    <div class="button-container">
                         <a class="btn-lg btn-tnth-primary disabled" href="#">
                             {{ display.link_label }}
