add missing trans tag in register page

--- a/portal/templates/flask_user/register.html
+++ b/portal/templates/flask_user/register.html
@@ -168,7 +168,7 @@ $(document).ready(function(){
     });
     $("#retype_password").on("blur", function() {
         if (!hasValue($(this).val())) {
-            $("#errorretype_password").addClass("has-error").text("Please re-type your password.");
+            $("#errorretype_password").addClass("has-error").text("{%trans%}Please re-type your password.{%endtrans%}");
         } else $("#errorretype_password").text("");
     });
 
