--- a/portal/templates/gil/what-is-prostate-cancer.html
+++ b/portal/templates/gil/what-is-prostate-cancer.html
@@ -6,6 +6,9 @@
         <div class="page-intro__content">
           <h1 class="page-intro__main">What is <span class="page-intro__main--accent">Prostate Cancer?</span></h1>
           <p class="page-intro__sub">Cancer is a disease in which cells in the body grow out of control. Prostate Cancer is when cancer starts in the prostate. Many men with prostate cancer die of other causes without ever having any symptoms from the cancer.</p>
+          <div class="button-callout button-callout--has-text"><strong class="js-scroll-down" data-target=".page-intro">Learn More</strong>
+            <figure class="button-callout__scroll js-scroll-down" data-target=".page-intro"></figure>
+          </div>
         </div>
       </div>
       <div class="module-wrap module-wrap--theme-gray">
