--- a/portal/templates/gil/base.html
+++ b/portal/templates/gil/base.html
@@ -115,7 +115,7 @@
   {% endblock %}
   {% block main %}
       {% block header %}
-        <header class="header">
+        <header class="header {%if user%}no-banner{%endif%}">
           <div class="header__menu">
             <a class="menu button button--small button--white js-nav-menu-toggle">
                 <figure></figure><span>Menu</span>
