rename terms & conditions to terms and relevant UI/backend fixes

--- a/portal/templates/gil/base.html
+++ b/portal/templates/gil/base.html
@@ -157,7 +157,7 @@
           <li class="nav-list__item"><a href="{{PORTAL}}/what-is-prostate-cancer">Prostate Cancer Facts</a></li>
         </ul>
         <ul class="nav-list nav-list--lower">
-          <li class="nav-list__item"><a href="{{PORTAL}}/terms-and-conditions">Terms and Conditions</a></li>
+          <li class="nav-list__item"><a href="{{PORTAL}}/terms">Terms</a></li>
           <li class="nav-list__item"><a href="{{PORTAL}}/privacy">Privacy</a></li>
           <li class="nav-list__item"><a href="{{PORTAL}}/contact">Contact</a></li>
         </ul>
