minor patients list org filtering fix, catch paste event in register page

--- a/portal/templates/flask_user/register.html
+++ b/portal/templates/flask_user/register.html
@@ -161,6 +161,8 @@ $(document).ready(function(){
         } else return true;
     }).on("shown.bs.popover", function () {
       $(this).trigger("keyup");
+    }).on("paste", function() {
+      $(this).trigger("keyup");
     });
 
     $("html").click(function(e) {
