--- a/portal/templates/initial_queries_macros.html
+++ b/portal/templates/initial_queries_macros.html
@@ -1,5 +1,5 @@
 {% macro tou(terms) -%}
-    <div id="topTerms" parent-section="true">
+    <div id="topTerms">
         <h4 class="tnth-headline">{{ _("Terms of Use") }}</h4>
         <hr/>
         <br/>
@@ -13,27 +13,47 @@
             <div id="termsExpand" class="tnth-hide">
               <a href=""><i class="fa fa-plus"></i> {{ _("View TrueNTH Terms") }}</a>
             </div>
-            <div>
-              <label id="agreeLabel" data-agree="false">
+            <div id="termsCheckbox">
+              <label id="agreeLabel" data-agree="false" type="terms">
                 <i class="fa fa-square-o fa-lg"></i> <span>{{ _("I consent and agree to the above terms.") }}</span>
               </label>
             </div>
             <br/>
         </div>
     </div>
-    {% if terms and terms['editorUrl'] %}<script>appendLREditContainer($("#topTerms"), "{{terms['editorUrl']}}", false);</script>{% endif %}
+    <div class="modal fade" id="termsReminderModal" tabindex="-1" role="dialog" aria-labelledby="termsReminderModalLabel">
+          <div class="modal-dialog" role="document">
+            <div class="modal-content">
+              <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                <h4 class="modal-title" id="termsReminderModalLabel">{{ _("To Continue") }}</h4>
+              </div>
+              <div class="modal-body">
+                <br/>
+                <p class="text-left text-danger">{{ _('You must agree to the terms and conditions by checking the provided checkbox.') }}</p>
+                <br/>
+              </div>
+              <div class="modal-footer">
+                <button type="button" class="btn btn-default" data-dismiss="modal">{{ _("OK") }}</button>
+              </div>
+            </div>
+          </div>
+    </div>
+   <!--  {% if terms and terms['editorUrl'] %}<script>appendLREditContainer($("#topTerms"), "{{terms['editorUrl']}}", false);</script>{% endif %} -->
   {%- endmacro %}
 
   {% macro nameGroup() -%}
-    <div class="row" id="nameGroup" parent-section="true">
-        <div class="col-md-4 col-xs-6">
+    <div class="row" id="nameGroup">
+        <div class="col-md-5 col-xs-6">
           <div class="form-group float-input-label">
+            <label>Name</label>
             <input class="form-control float-text init-queries-field" id="firstname" name="firstname" placeholder="{{ _('First Name') }}" type="text" required="required" data-error="{{ _('First name is required') }}"  />
             <div class="help-block with-errors"></div>
           </div>
         </div>
-        <div class="col-md-4 col-xs-6">
+        <div class="col-md-5 col-xs-6">
           <div class="form-group float-input-label">
+            <label>&nbsp;</label>
             <input class="form-control float-text init-queries-field" id="lastname" name="lastname" placeholder="{{ _('Last Name') }}" type="text" required="required" data-error="{{ _('Last name is required') }}" />
             <div class="help-block with-errors"></div>
           </div>
@@ -46,13 +66,12 @@
               if ($(this).val() != "") assembleContent.demo($("#iq_userId").val());
             });
         });
-
       });
     </script>
   {%- endmacro %}
 
   {% macro rolesGroup() -%}
-      <div class="form-group" id="rolesGroup" parent-section="true">
+      <div class="form-group" id="rolesGroup">
           <div class="radio">
             <label>
               <input type="radio" class="init-queries-field" name="user_type" id="role_patient" value="patient"> {{ _("I'm a man who is concerned about prostate cancer for myself") }}
@@ -70,17 +89,15 @@
   {{tou()}}
 
   {% macro dobGroup() -%}
-      <div class="tnth-hide" id="bdGroup" parent-section="true">
-          <hr />
-          <p>{{ _("When is your birthday?") }}</p>
+      <div id="bdGroup">
           <input type="hidden" name="birthDate" id="birthday" value="">
           <div class="form-group">
-            <label>{{ _("Birth Date") }}</label>
+            <label>{{ _("Birth Date") }} <span class="bd-optional text-muted">(optional)</span></label>
             <div class="row">
-              <div class="col-md-3 col-xs-4">
+              <div class="col-md-4 col-xs-4">
                 <input class="form-control bd-element init-queries-field" id="date" name="birthdayDate" placeholder="DD" type="text" maxlength="2" pattern="\d[\d]?" data-error="The birth day field is required and must be valid format" required />
               </div>
-              <div class="col-md-3 col-xs-4">
+              <div class="col-md-4 col-xs-4">
                 <select type="select" class="form-control bd-element init-queries-field" name="birthdayMonth" id="month" data-error="-- A birth month must be selected" required>
                   <option value="">{{ _("Month") }}...</option>
                   <option value="01">{{ _("January") }}</option>
@@ -97,7 +114,7 @@
                   <option value="12">{{ _("December") }}</option>
                 </select>
               </div>
-              <div class="col-md-3 col-xs-4">
+              <div class="col-md-4 col-xs-4">
                 <input class="form-control bd-element init-queries-field" id="year" name="birthdayYear" placeholder="YYYY" type="text" maxlength="4" pattern = "(19|20)\d{2}" data-error="The birth year is required and must be in valid format" required />
               </div>
             </div>
@@ -107,11 +124,10 @@
       </div>
   {%- endmacro %}
   {% macro patientQGroup(user) -%}
-    <div id="patientQ" class="tnth-hide" parent-section="true">
-        <hr />
+    <div id="patientQ">
         <div id="patBiopsy" data-topic="biopsy" class="pat-q">
           <br />
-          <p>{{ _("Have you had a prostate cancer biopsy?") }}</p>
+          <p class="pat-label">{{ _("Have you had a prostate cancer biopsy?") }}</p>
           <div class="form-group">
             <div class="radio biopsy-option">
               <label>
@@ -130,24 +146,28 @@
             </div>
              <div class="radio biopsy-option">
               <label>
-                <input type="radio" class="init-queries-field" name="biopsy" id="biopsy_unknown" value="unknown"> {{ _("I don't know") }}
+                <input type="radio" class="init-queries-field" name="biopsy" id="biopsy_unknown" value="false" status="unknown"> {{ _("I don't know") }}
               </label>
             </div>
           </div>
         </div>
-
         <div id="patDiag" data-topic="pca_diag" class="tnth-hide pat-q">
           <br />
-          <p>{{ _("Have you been diagnosed with prostate cancer?") }}</p>
+          <p class="pat-label">{{ _("Have you been diagnosed with prostate cancer?") }}</p>
           <div class="form-group">
             <div class="radio">
               <label>
-                <input type="radio" class="init-queries-field" name="pca_diag" id="pca_diag_yes" value="true"> {{ _("Yes") }}
+                <input type="radio" class="init-queries-field" name="pca_diag" id="pca_diag_yes" value="true"> {{ _("Yes (my biopsy was positive)") }}
               </label>
             </div>
             <div class="radio">
               <label>
-                <input type="radio" class="init-queries-field" name="pca_diag" id="pca_diag_no" value="false"> {{ _("No") }}
+                <input type="radio" class="init-queries-field" name="pca_diag" id="pca_diag_no" value="false"> {{ _("No (my biopsy was negative") }}
+              </label>
+            </div>
+            <div class="radio">
+              <label>
+                <input type="radio" class="init-queries-field" name="pca_diag" id="pca_diag_unknown" value="false" status="unknown"> {{ _("I don't know") }}
               </label>
             </div>
           </div>
@@ -155,7 +175,7 @@
         {% if not config.LOCALIZED_AFFILIATE_ORG %}
           <div id="patMeta" data-topic="pca_localized" class="tnth-hide pat-q">
              <br />
-             <p>{{ _("Is the prostate cancer only within the prostate?") }}</p>
+             <p class="pat-label">{{ _("Is the prostate cancer only within the prostate?") }}</p>
              <div class="form-group">
                <div class="radio">
                  <label>
@@ -167,12 +187,17 @@
                    <input type="radio" class="init-queries-field" name="pca_localized" id="pca_localized_no" value="false"> {{ _("No (the cancer is in other parts of my body, too)") }}
                  </label>
                </div>
+                <div class="radio">
+                 <label>
+                   <input type="radio" class="init-queries-field" name="pca_localized" id="pca_localized_no" value="true" status="unknown"> {{ _("I don't know") }}
+                 </label>
+               </div>
              </div>
           </div>
         {% endif %}
         <div id="patTx" data-topic="tx" class="tnth-hide pat-q">
           <br />
-          <p>{{ _("Have you begun prostate cancer treatment?") }}</p>
+          <p class="pat-label">{{ _("Have you begun prostate cancer treatment?") }}</p>
           <div class="form-group">
             <div class="radio">
                 <label>
@@ -188,7 +213,7 @@
         </div>
         <br/>
       </div>
-      <script>
+      <script defer>
         function checkBiopsyDate(val) {
            if (!hasValue(val)) return false;
            var m = val.match(/(\/)/);
@@ -262,12 +287,8 @@
         });</script>
   {%- endmacro %}
   {% macro clinic(consent_agreements) -%}
-    <div id="clinics" class="tnth-hide" parent-section="true">
-      <hr />
-      <h3 class="tnth-headline">{{ _("Your Clinic") }}</h3>
-
-      <p>{{ _("What is your main clinic for prostate cancer care?") }}</p>
-
+    <div id="clinics">
+      <p class="subtitle">{{ _("What is your main clinic for prostate cancer care?") }}</p>
       <div class="form-group" id="userOrgs">
         <div style="margin-left: 10px">
           <div id="fillOrgs"></div>
@@ -276,7 +297,7 @@
       </div>
       {{consent(consent_agreements)}}
     </div>
-    <script>
+    <script defer>
     function _orgsCallback() {
       {% if 'patient' in config.CONSENT_EDIT_PERMISSIBLE_ROLES %}
           var userOrgs = $("#userOrgs input[name='organization']").not('[parent_org]');
