--- a/portal/templates/initial_queries_macros.html
+++ b/portal/templates/initial_queries_macros.html
@@ -162,7 +162,7 @@
             </div>
             <div class="radio">
               <label>
-                <input type="radio" class="init-queries-field" name="pca_diag" id="pca_diag_no" value="false"> {{ _("No (my biopsy was negative") }}
+                <input type="radio" class="init-queries-field" name="pca_diag" id="pca_diag_no" value="false"> {{ _("No (my biopsy was negative)") }}
               </label>
             </div>
             <div class="radio">
