--- a/portal/static/less/eproms.less
+++ b/portal/static/less/eproms.less
@@ -1706,6 +1706,10 @@ div.noOrg-container {
 .modal-footer {
   padding: 1em;
 }
+.modal-header {
+  font-size: 1.2em;
+  min-height: 3em;
+}
 .modal-header button,
 .modal-header button * {
   color: #FFF;
@@ -1714,9 +1718,13 @@ div.noOrg-container {
 .modal label {
   font-size: 1em;
 }
+#patientsInstrumentList label,
+#patientsDownloadTypeList label {
+  font-size: 0.8em;
+}
 .modal button,
 .modal a.btn {
-  font-size: 0.9em;
+  font-size: 0.85em;
 }
 
 .hide {
